# ianlibdemo

./: Makefile  README.md  cap_data.txt  capital_mod.py  environment.yml  example_in.txt  meta.yaml  pyproject.toml
scripts/: conda_build.sh  conda_clean.sh  version_sync.py
src/ianlibdemo/: fun_pandas.py
tests/: test_capitalize.py  test_fun_pandas.py
