[tool.poetry]
name = "ianlibdemo"
version = "0.1.0"
description = "Python packaging - how does it work?"
authors = ["Ian Preston"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
