[tool.poetry]
name = "ianlibdemo"
version = "0.2.0"
description = "Python packaging - how does it work?"
authors = ["Ian Preston"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
